lint script fixed to work in all platforms

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "pretty-quick": "pretty-quick",
-    "lint": "./node_modules/eslint/bin/eslint.js ./ --fix",
+    "lint": "eslint ./ --fix",
     "prepare": "husky install"
   },
   "author": "",
