--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start:dev": "NODE_ENV=development nodemon server.js",
+    "start:stag": "NODE_ENV=staging nodemon server.js",
     "pretty-quick": "pretty-quick",
     "lint": "eslint ./ --fix",
     "prepare": "husky install"
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1"
