--- a/.env.development.example
+++ b/.env.development.example
@@ -1,3 +1,3 @@
 PORT=8080
-MONGODB_URI='mongodb://localhost:27017/nodejs-api'
+MONGODB_URI='MONGO_HOSTED_IN_DOCKER/nodejs-api'
 JWT_SECRET='somethingsecret'
