--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start:local": "NODE_ENV=local nodemon server.js",
     "start:dev": "NODE_ENV=development nodemon server.js",
     "start:stag": "NODE_ENV=staging nodemon server.js",
     "pretty-quick": "pretty-quick",
