--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
       - 8080:8080
     volumes:
       - ./:/app
-    command: npm run start:dev
+    env_file: .env.docker
+    command: npm run docker
   mongo:
     image: mongo
     container_name: mongodb
