--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "main": "server.js",
   "scripts": {
     "start:local": "NODE_ENV=local nodemon server.js",
-    "start:dev": "NODE_ENV=development nodemon server.js",
     "start:stag": "NODE_ENV=staging nodemon server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "docker": "NODE_ENV=docker nodemon server.js",
     "pretty-quick": "pretty-quick",
     "lint": "eslint ./ --fix",
     "prepare": "husky install"
