--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,8 @@ services:
     restart: unless-stopped
     ports:
       - 8080:8080
+      - 9229:9229
     volumes:
       - ./:/app
-    env_file: .env.docker
-    command: npm run docker
-  mongo:
-    image: mongo
-    container_name: mongodb
-    restart: unless-stopped
-    ports:
-      - 27017:27017
-    volumes:
-      - mongodb:/data/db
-
-volumes:
-  mongodb:
+    env_file: .env
+    command: npm run start
