--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon --inspect=0.0.0.0:9229 server.js",
     "start:local": "NODE_ENV=local nodemon server.js",
     "start:stag": "NODE_ENV=staging nodemon server.js",
     "start:prod": "NODE_ENV=production node server.js",
-    "docker": "NODE_ENV=docker nodemon server.js",
     "pretty-quick": "pretty-quick",
     "lint": "eslint ./ --fix",
     "prepare": "husky install"
